testdata/baselines/reference/submodule/compiler/classFieldSuperNotAccessibleJs.errors.txt
index.js(5,14): error TS2339: Property 'roots' does not exist on type 'YaddaBase'.
index.js(7,14): error TS2339: Property 'justProp' does not exist on type 'YaddaBase'.
index.js(9,9): error TS7053: Element implicitly has an 'any' type because expression of type '"literalElementAccess"' can't be used to index type 'YaddaBase'.
  Property 'literalElementAccess' does not exist on type 'YaddaBase'.
index.js(14,14): error TS2339: Property 'foo' does not exist on type 'YaddaBase'.
index.js(20,22): error TS2339: Property 'roots' does not exist on type 'YaddaBase'.
index.js(23,22): error TS2339: Property 'foo' does not exist on type 'YaddaBase'.
index.js(26,22): error TS2339: Property 'justProp' does not exist on type 'YaddaBase'.
index.js(29,22): error TS2339: Property 'literalElementAccess' does not exist on type 'YaddaBase'.


==== index.js (8 errors) ====
    // https://github.com/microsoft/TypeScript/issues/55884
    
    class YaddaBase {
        constructor() {
            this.roots = "hi";
                 ~~~~~
!!! error TS2339: Property 'roots' does not exist on type 'YaddaBase'.
            /** @type number */
            this.justProp;
                 ~~~~~~~~
!!! error TS2339: Property 'justProp' does not exist on type 'YaddaBase'.
            /** @type string */
            this['literalElementAccess'];
            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type '"literalElementAccess"' can't be used to index type 'YaddaBase'.
!!! error TS7053:   Property 'literalElementAccess' does not exist on type 'YaddaBase'.
    
            this.b()
        }
        accessor b = () => {
            this.foo = 10
                 ~~~
!!! error TS2339: Property 'foo' does not exist on type 'YaddaBase'.
        }
    }
    
    class DerivedYadda extends YaddaBase {
        get rootTests() {
            return super.roots;
                         ~~~~~
!!! error TS2339: Property 'roots' does not exist on type 'YaddaBase'.
        }
        get fooTests() {
            return super.foo;
                         ~~~
!!! error TS2339: Property 'foo' does not exist on type 'YaddaBase'.
        }
        get justPropTests() {
            return super.justProp;
                         ~~~~~~~~
!!! error TS2339: Property 'justProp' does not exist on type 'YaddaBase'.
        }
        get literalElementAccessTests() {
            return super.literalElementAccess;
                         ~~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'literalElementAccess' does not exist on type 'YaddaBase'.
        }
    }
    